2005-06-25  Darin Adler  <darin@apple.com>

        - updated a layout test so that it doesn't depend on a remote resource via http

        * layout-tests/fast/backgrounds/001.html: Change image URL to be relative.
        * layout-tests/fast/backgrounds/resources/bg_position_larger.gif: Added.

2005-06-24  Darin Adler  <darin@apple.com>

        Changes by Mitz Pettel.
        Reviewed by me.

        Test cases added:
        * layout-tests/fast/text/international/bidi-explicit-embedding-expected.txt: Added.
        * layout-tests/fast/text/international/bidi-explicit-embedding.html: Added.

        - fixed <http://bugzilla.opendarwin.org/show_bug.cgi?id=3599>
          Incorrect layout of explicit embedding levels

        * khtml/rendering/bidi.cpp:
        (khtml::embed): Set up the new run correctly following an embed/pop.
        (khtml::RenderBlock::bidiReorderLine): Close the "dangling" run when we see an explicit
        embedding character (or PDF).

2005-06-24  Darin Adler  <darin@apple.com>

        Changes by Mitz Pettel.
        Reviewed by me.

        Test cases added:
        * layout-tests/fast/text/international/bidi-CS-after-AN-expected.txt: Added.
        * layout-tests/fast/text/international/bidi-CS-after-AN.html: Added.

        - fixed <http://bugzilla.opendarwin.org/show_bug.cgi?id=3693>
          Bug_72578 in KHTML: bidi algorithm misbehaves with CS after AN

        * khtml/rendering/bidi.cpp: (khtml::RenderBlock::bidiReorderLine): Rolled in the
        patch from the KDE tree.

2005-06-24  Justin Garcia  <justin.garcia@apple.com>

        - <http://bugzilla.opendarwin.org/show_bug.cgi?id=3673> 
            Adds QBuffer::setBuffer(QByteArray) support to KWQBuffer, and adds a QBuffer(QByteArray) constructor.

        Reviewed by Darin

        Test cases added: Non required

        * kwq/KWQBuffer.h:
        (QBuffer::QBuffer):
        * kwq/KWQBuffer.mm:
        (QBuffer::setBuffer):
